fixed bug with z-index

--- a/src/view/components/menu/Menu.module.scss
+++ b/src/view/components/menu/Menu.module.scss
@@ -9,7 +9,7 @@
 		flex-direction: column;
 		background-color: white;
 		box-shadow: 0px 3px 9px #00000026;
-		z-index: 5;
+		z-index: 205;
 
 		&.ltr {
 			right: 0;
