--- a/src/view/style/page.scss
+++ b/src/view/style/page.scss
@@ -12,6 +12,7 @@
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
+		z-index: 100;
 
 		&.rtl {
 			.back-arrow-icon {
