--- a/src/view/style/style.scss
+++ b/src/view/style/style.scss
@@ -413,6 +413,9 @@ b {
 	display: flex;
 	flex-direction: column;
 	padding-bottom: 100px;
+	h2{
+		text-align: start;
+	}
 }
 
 .card {
